# scitex-genai

./: .env.example  .envrc  .gitignore  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  codecov.yml  pyproject.toml
.claude/: CLAUDE.md
.github/ci/: build-in-sif.sh  publish-in-sif.sh  run-in-sif.sh
.github/workflows/: auto-merge-to-develop.yaml  ci.yml  cla.yml  docs.yml  import-smoke-on-ubuntu-py3-12.yml  newb-docs-quality-on-ubuntu-latest.yml  pr-ci.yml  publish-pypi.yml  pypi-publish-and-github-release-on-tag.yml  pytest-matrix-on-ubuntu-py3-11-3-12-3-13.yml  quality-audit-on-ubuntu-latest.yml  release-ci.yml  rtd-sphinx-build-on-ubuntu-latest.yml  scitex-genai-quality-audit-on-ubuntu-latest.yml  test.yml
docs/adr/: 0001-claude-codex-stream-compatibility.md  0002-provider-qualified-codex-account-store.md
docs/sphinx/: conf.py  installation.md  quickstart.md
examples/: 01_genai.ipynb  example_genai.py
src/scitex_genai/: __init__.py  __main__.py
src/scitex_genai/_skills/scitex-genai/: 01_installation.md  02_quick-start.md  03_python-api.md  04_cli-reference.md  06_http-api.md  10_llm.md  20_env-vars.md  SKILL.md  llm.md
src/scitex_genai/_sphinx_html/: .buildinfo  api.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  quickstart.html  search.html  searchindex.js
src/scitex_genai/_sphinx_html/.doctrees/: api.doctree  environment.pickle  index.doctree  installation.doctree  quickstart.doctree
src/scitex_genai/_sphinx_html/.doctrees/_generated/: scitex_genai.agent.doctree  scitex_genai.audio.doctree  scitex_genai.doctree  scitex_genai.embed.doctree  scitex_genai.image.doctree  scitex_genai.llm.doctree  scitex_genai.multimodal.doctree  scitex_genai.video.doctree
src/scitex_genai/_sphinx_html/_generated/: scitex_genai.agent.html  scitex_genai.audio.html  scitex_genai.embed.html  scitex_genai.html  scitex_genai.image.html  scitex_genai.llm.html  scitex_genai.multimodal.html  scitex_genai.video.html
src/scitex_genai/_sphinx_html/_sources/: api.rst.txt  index.rst.txt  quickstart.md.txt
src/scitex_genai/_sphinx_html/_sources/_generated/: scitex_genai.agent.rst.txt  scitex_genai.audio.rst.txt  scitex_genai.embed.rst.txt  scitex_genai.image.rst.txt  scitex_genai.llm.rst.txt  scitex_genai.multimodal.rst.txt  scitex_genai.rst.txt  scitex_genai.video.rst.txt
src/scitex_genai/agent/: __init__.py
src/scitex_genai/audio/: __init__.py
src/scitex_genai/embed/: __init__.py
src/scitex_genai/gateway/: __init__.py  _accounts.py  _anthropic.py  _cli.py  _codex.py  _credentials.py  _errors.py  _server.py  _usage.py
src/scitex_genai/image/: __init__.py
src/scitex_genai/llm/: _Anthropic.py  _BaseGenAI.py  _DeepSeek.py  _Google.py  _Groq.py  _LiteLLM.py  _Llama.py  _OpenAI.py  _PARAMS.py  _VLLM.py  __init__.py  _calc_cost.py  _format_output_func.py  _genai_factory.py
src/scitex_genai/multimodal/: __init__.py
src/scitex_genai/video/: __init__.py
tests/: conftest.py
tests/develop/: test_audit.py
tests/examples/: test_01_genai.py  test_example_genai.py
tests/integration/: test_cross_package_imports.py
tests/scitex_genai/: test_smoke.py
tests/scitex_genai/gateway/: test__accounts.py  test__anthropic.py  test__codex.py  test__credentials.py  test__server.py  test__usage.py
tests/scitex_genai/llm/: test__Anthropic.py  test__BaseGenAI.py  test__DeepSeek.py  test__Google.py  test__Groq.py  test__LiteLLM.py  test__Llama.py  test__OpenAI.py  test__PARAMS.py  test__Perplexity.py  test__VLLM.py  test__calc_cost.py  test__format_output_func.py  test__genai_factory.py
